Fix dark mode issue with home page avatars.

--- a/FrontEnd/styles/colors.scss
+++ b/FrontEnd/styles/colors.scss
@@ -267,5 +267,7 @@
 
         --panel-button-background: var(--very-dark-grey);
         --panel-cta-background: var(--dark-grey);
+
+        --scta-avatar-gradient: linear-gradient(rgba(25, 25, 35, 0%) 0, rgba(25, 25, 35, 0%) 50%, rgba(25, 25, 35, 100%) 100%);
     }
 }
